# Clinical_LLM

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements-training.txt  requirements.txt
docs/: data_preparation.md  deployment_plan.md  evaluation_plan.md  milestones.md  model_development.md  planner_schema.md  project_overview.md  requirements.md  semi_synthetic_data_strategy.md
scripts/: export_finetuning_data.py  generate_synthetic_queries.py  init_challenge_set.py  inspect_dataset.py  prepare_phase5_experiment.py  run_evaluation.py  run_planner_demo.py  run_query.py  run_training.py
src/icu_qa/: __init__.py  config.py  query_flow.py
src/icu_qa/data/: __init__.py  loader.py  preprocessing.py  schema.py
src/icu_qa/evaluation/: __init__.py  benchmark.py  challenges.py  finetune.py  metrics.py  reporting.py
src/icu_qa/execution/: __init__.py  aggregations.py  comparisons.py  engine.py
src/icu_qa/explanation/: __init__.py  summarizer.py
src/icu_qa/planning/: __init__.py  json_schema.py  planner.py  prompt_templates.py  validator.py
src/icu_qa/training/: __init__.py  artifacts.py  experiment.py  runner.py
tests/: test_benchmark.py  test_challenges.py  test_config.py  test_execution_engine.py  test_finetune.py  test_planner.py  test_preprocessing.py  test_query_flow.py  test_reporting.py  test_schema.py  test_training_artifacts.py  test_training_runner.py  test_validator.py
training_pc/: README.md  requirements.txt  setup_checklist.md
